Bug 383825 - Ctrl colour picking tool shows inverted image instead of the colour being picked
Summary: Ctrl colour picking tool shows inverted image instead of the colour being picked
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: CPU Canvas (other bugs)
Version First Reported In: 3.2.0
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-22 03:05 UTC by Alvin Wong
Modified: 2017-09-17 16:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2017-08-22 03:05:33 UTC
The box looks like to be XORed, probably forgot to reset composition mode state after rendering the brush outline.
Comment 1 Alvin Wong 2017-09-17 16:12:09 UTC
Git commit b6e9d537070af23b211eaf8ef5ff1faa2f36d83f by Alvin Wong.
Committed on 17/09/2017 at 16:09.
Pushed by alvinwong into branch 'krita/3.3'.

Fix paint tool colour picker display witn QPainter canvas

M  +2    -0    libs/ui/tool/kis_tool.cc

https://commits.kde.org/krita/b6e9d537070af23b211eaf8ef5ff1faa2f36d83f
Comment 2 Alvin Wong 2017-09-17 16:12:10 UTC
Git commit b1f67e34fce0b6ada0e9c06d9feab8c765891677 by Alvin Wong.
Committed on 17/09/2017 at 16:10.
Pushed by alvinwong into branch 'master'.

Fix paint tool colour picker display witn QPainter canvas

M  +2    -0    libs/ui/tool/kis_tool.cc

https://commits.kde.org/krita/b1f67e34fce0b6ada0e9c06d9feab8c765891677