Fix paint tool colour picker display witn QPainter canvas

BUG: 383825